--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+# Release 20180416-01
+
+### New seed data
+* seed/mecab-user-dict-seed.20180416.csv.xz
+	execute: Periodic data update on 2018-04-16(Mon)
+	commit: https://github.com/neologd/mecab-ipadic-neologd/commit/c84c40b110a1235af33c2bbfe9e22e04624664a9
+
 # Release 20180409-01
 
 ### New seed data
